--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </tr>
     <tr>
       <td>2014 - 2016</td>
-      <td>Engineer</td>
+      <td>Robotic Engineer</td>
     </tr>
   </table>
   <hr>
